examples/errors/0_unresolved_type/layout.tml
#use <definitions.tmd>

<Window>
</Window>